Use G1GC by default instead of CMS
There is a JEP out (https://openjdk.java.net/jeps/363) that proposes to
remove the Concurrent Mark Sweep GC in JDK 14.

We recently did various work-load tests in an attempt to find gaps in
our circuit breaker logic and in these tests we already focused on using
G1GC.

Overall it seemed as the latency (especially tail latency) is overall
better with G1GC in the workloads we tried. So I think it is time to
change the default.

Users could still change back by changing the options manually in case
they experience a regression with their particular workload.